--- a/back-end/html/update.html
+++ b/back-end/html/update.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>UPDATE</h1>
-    <form action="/v1/products" method="put" enctype="multipart/form-data">
+    <form action="/v1/products/:id" method="put" enctype="multipart/form-data">
       <label for="id">id del producto:</label>
       <input type="text" name="id" id="id" required>
       <br>
